--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -7,12 +7,12 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_near"
         android:icon="@drawable/navi_near_selector"
         android:title="@string/title_near" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_mine"
         android:icon="@drawable/navi_mine_selector"
         android:title="@string/title_mine" />
 
