--- a/app/src/main/res/layout/near_avtivity.xml
+++ b/app/src/main/res/layout/near_avtivity.xml
@@ -71,9 +71,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_toEndOf="@id/search_bar_layout"
-        android:background="@color/global_black"
+        android:layout_below="@id/search_bar_layout"
+        android:background="@color/global_white"
+        android:paddingLeft="36dp"
         android:orientation="vertical" >
 
 
