--- a/app/src/main/res/layout/near_avtivity.xml
+++ b/app/src/main/res/layout/near_avtivity.xml
@@ -405,4 +405,51 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/map_tool_3"
+        android:layout_width="44dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:clickable="true"
+        android:layout_centerInParent="true"
+        android:background="@mipmap/near_map_tool_3"
+        />
+
+    <ImageView
+        android:id="@+id/map_tool_2"
+        android:layout_width="44dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:clickable="true"
+        android:layout_above="@id/map_tool_3"
+        android:layout_marginBottom="10dp"
+        android:background="@mipmap/near_map_tool_2"
+        />
+
+    <ImageView
+        android:id="@+id/map_tool_1"
+        android:layout_width="44dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:clickable="true"
+        android:layout_above="@id/map_tool_2"
+        android:layout_marginBottom="10dp"
+        android:background="@mipmap/near_map_tool_1"
+        />
+
+    <ImageView
+        android:id="@+id/map_location"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:clickable="true"
+        android:layout_marginBottom="40dp"
+        android:background="@mipmap/near_map_location"
+        android:layout_alignParentBottom="true"
+        />
+
 </RelativeLayout>
