--- a/app/src/main/res/layout/near_search_result_list_item.xml
+++ b/app/src/main/res/layout/near_search_result_list_item.xml
@@ -11,6 +11,7 @@
         android:layout_alignParentRight="true">
 
         <ImageView
+            android:id="@+id/to_here"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@mipmap/near_to_here"
